# timer

./: .gitignore  README.md  pyproject.toml
timer/: main.py
