[tool.poetry]
name = "timer"
version = "0.1.0"
description = ""
authors = ["Bas Wilson <friedcatps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
timer = "timer.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
